# labs-new-way-of-consulting

./: .gitignore  README.md
docs/: correlation-primer.md  dataset-download-guide.md  setup-guide.md  teaching-guidelines.md
lab-01-nyc-neighborhood-signals/: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml
lab-01-nyc-neighborhood-signals/data/raw/: .gitkeep  README.md
lab-01-nyc-neighborhood-signals/exercises/: 01_data_exploration.md  02_geographic_standardization.md  03_temporal_aggregation.md  04_dataset_joining.md  05_correlation_analysis.md
lab-01-nyc-neighborhood-signals/findings/: README.md
lab-01-nyc-neighborhood-signals/hints/: expected_correlations.md  grain_definitions.md  join_strategy.md
lab-01-nyc-neighborhood-signals/src/: __init__.py
lab-02-us-safety-drivers/: .env.example  Makefile  README.md  app.py  pyproject.toml
lab-02-us-safety-drivers/data/raw/: README.md
lab-02-us-safety-drivers/exercises/: 01_accident_pattern_analysis.md  02_weather_integration.md  03_geographic_mapping.md  04_temporal_features.md  05_severity_correlation.md
lab-02-us-safety-drivers/src/: __init__.py
lab-03-hospitality-demand/: .env.example  Makefile  README.md  app.py  pyproject.toml
lab-03-hospitality-demand/data/raw/: README.md
lab-03-hospitality-demand/exercises/: 01_booking_pattern_analysis.md  02_cancellation_analysis.md  03_holiday_impact.md  04_seasonality_features.md  05_lead_time_correlation.md
lab-03-hospitality-demand/src/: __init__.py
lab-04-streaming-catalog/: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml
lab-04-streaming-catalog/data/raw/: .gitkeep  README.md
lab-04-streaming-catalog/exercises/: 01_catalog_profiling.md  02_fuzzy_matching.md  03_entity_resolution.md  04_enrichment_validation.md  05_metadata_correlation.md
lab-04-streaming-catalog/scripts/: .gitkeep
lab-04-streaming-catalog/src/: __init__.py
lab-04-streaming-catalog/visualizations/: README.md
lab-05-nyc-mobility-externalities/: .env.example  Makefile  README.md  app.py  pyproject.toml
lab-05-nyc-mobility-externalities/data/raw/: README.md
lab-05-nyc-mobility-externalities/exercises/: 01_volume_handling.md  02_temporal_aggregation.md  03_spatial_bucketing.md  04_complaint_taxonomy.md  05_externality_correlations.md
lab-05-nyc-mobility-externalities/src/: __init__.py
scripts/: macos-setup.sh  windows-setup.ps1
shared/utilities/: download_datasets.py
